# pydmrg

./: .gitignore  README.md  TODO  __init__.py  dmrg.py  param.py  params.py  quanta.py  rotationmat.py  spinblock.py  stateinfo.py  sweep.py  utils.py  wavefunction.py
core/: CMakeLists.txt  _dmrg.cpp  _dmrg.pyx  config.h  hacker.cc  hacks.cc  hacks.h  itrf.h  rotationmat.cc  rotmat.cc  rotmat.h  spinblock.cc  stateinfo.cc  wavefn.cc
tests/: dmrg-1.conf  test_dmrg_simple.py  test_wavefunction.py
